ajustes listagem ods via BI